# 3DGameEngine_OpenGL

./: .gitignore  CMakeLists.txt  README.md  structure.txt
Agina/: CMakeLists.txt
Agina/assets/shaders/: basic.vert  grid.vert  pbr.fragment  skybox.vert
Agina/src/: Application.cpp  Application.hpp  EntryPoint.hpp
Agina/src/Application/: Application.cpp  Application.hpp
Agina/src/Application/Inputs/: Inputs.hpp
Agina/src/Application/LayerStack/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
Agina/src/Application/Platform/: Window.cpp
Agina/src/Application/Renderer/: Grid.cpp  Grid.hpp  Model.cpp  OpenGLObjects.cpp  Renderer.cpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  SkyBox.cpp  SkyBox.hpp  Texture.hpp  Vertex.hpp
Agina/src/Application/Time/: Time.cpp
Agina/src/Application/Utility/: LocU.hpp
Agina/src/Core/Inputs/: Events.hpp  Inputs.cpp  Inputs.hpp
Agina/src/Core/LayerStack/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
Agina/src/Core/Platform/: Window.cpp  Window.hpp
Agina/src/Core/Time/: Time.cpp  Time.hpp
Agina/src/Core/Utility/: LocU.hpp
Agina/src/ECS/: Components.hpp  Entity.hpp  Transform.hpp
Agina/src/ImGui/: ImGuiLayer.hpp
Agina/src/Layers/GameLayer/: GameLayer.cpp
Agina/src/Layers/GameLayer/Camera/: Camera.cpp  Camera.hpp
Agina/src/Layers/GameLayer/ECS/: Components.hpp  Transform.hpp
Agina/src/Layers/GameLayer/Scene/: Scene.cpp  SceneManager.cpp
Agina/src/Layers/GameLayer/Systems/: Systems.hpp
Agina/src/Renderer/: FrameBuffer.hpp  Grid.cpp  Grid.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  OpenGLObjects.cpp  OpenGLObjects.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  SkyBox.cpp  SkyBox.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
Agina/src/Scene/: Scene.cpp  Scene.hpp
Agina/src/Systems/: CameraSystem.hpp  RenderSystem.hpp
Agina/src/Systems/Camera/: Camera.cpp  Camera.hpp
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp
SandBoxGame/: CMakeLists.txt
SandBoxGame/src/: SandBox.cpp
shaders/: basic.fragment  grid.fragment  grid.vert  pbr.vert
src/: Game.cpp  main.cpp
src/Application/: Application.cpp  Application.hpp
src/core/: application.cpp  application.hpp  inputs.cpp  inputs.hpp  layer.hpp  time.cpp  time.hpp  window.cpp  window.hpp
src/event/: events.hpp
src/render/: OpenGLObjects.cpp  OpenGLObjects.hpp  entity.cpp  entity.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  (+2 more)
(+50 files in other folders)
